exercises/pingpong_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong-app # This is the app as declared in the deployment.
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 3000
